--- a/ui/src/app/views/navbar/navbar.html
+++ b/ui/src/app/views/navbar/navbar.html
@@ -70,16 +70,16 @@
         </nz-dropdown-menu>
     </ng-container>
 
-    <ng-container *ngIf="currentAuthSummary">
-        <ng-container *ngIf="currentAuthSummary.isAdmin() || (apiConfig && !apiConfig.project_creation_disabled)">
-            <button nz-button nzType="default" [routerLink]="['/project']">
+    <ng-container *ngIf="currentAuthSummary && apiConfig">
+        <ng-container *ngIf="currentAuthSummary.isAdmin() || !apiConfig.project_creation_disabled">
+            <button nz-button nzType="default" nzGhost [routerLink]="['/project']">
                 <i nz-icon nzType="plus"></i>
                 {{ 'navbar_project_create' | translate }}
             </button>
         </ng-container>
         <ng-container
-            *ngIf="!currentAuthSummary.isAdmin() && apiConfig && apiConfig.project_creation_disabled && apiConfig.project_info_creation_disabled">
-            <button nz-button nzType="default" [nzTooltipTitle]="createProjectTemplate" nz-tooltip>
+            *ngIf="!currentAuthSummary.isAdmin() && apiConfig.project_creation_disabled && apiConfig.project_info_creation_disabled">
+            <button nz-button nzType="default" nzGhost [nzTooltipTitle]="createProjectTemplate" nz-tooltip>
                 <i nz-icon nzType="info-circle" nzTheme="outline"></i>
                 {{ 'navbar_project_create' | translate }}
             </button>
