--- a/ui/src/app/views/project/show/admin/repomanager/list/project.repomanager.list.html
+++ b/ui/src/app/views/project/show/admin/repomanager/list/project.repomanager.list.html
@@ -1,24 +1,30 @@
 <div id="projectRepoManagers">
     <nz-table [nzData]="reposmanagers" nzSize="small" #listrepos>
         <thead>
-        <tr>
-            <th nzWidth="400px">Name</th>
-            <th nzWidth="50px"></th>
-        </tr>
+            <tr>
+                <th nzWidth="400px">Name</th>
+                <th nzWidth="50px"></th>
+            </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let r of listrepos.data">
-            <td>
-                {{r.name}}
-                <span *ngIf="r.created_by !== ''"> -{{ 'project_repoman_created_by' | translate }}{{r.created_by}}</span>
-                <span *ngIf="r.auth && r.auth.username && r.auth.username !== ''"> - User: {{r.auth.username}}</span>
-                <span *ngIf="r.auth && r.auth.sshUsername && r.auth.sshUsername !== ''"> - SSH User: {{r.auth.sshUsername}}</span>
-                <span *ngIf="r.auth && r.auth.sshKeyName && r.auth.sshKeyName !== ''"> - SSH Key: {{r.auth.sshKeyName}}</span>
-            </td>
-            <td class="rightAlign">
-                <button nz-button nzDanger nzType="primary" [nzLoading]="deleteLoading" *ngIf="r.type === ''" (click)="clickDeleteButton(r.name)">Remove</button>
-            </td>
-        </tr>
+            <tr *ngFor="let r of listrepos.data">
+                <td>
+                    {{r.name}}
+                    <span *ngIf="r.created_by !== ''"> -{{ 'project_repoman_created_by' | translate
+                        }}{{r.created_by}}</span>
+                    <span *ngIf="r.auth && r.auth.username && r.auth.username !== ''"> - User:
+                        {{r.auth.username}}</span>
+                    <span *ngIf="r.auth && r.auth.sshUsername && r.auth.sshUsername !== ''"> - SSH User:
+                        {{r.auth.sshUsername}}</span>
+                    <span *ngIf="r.auth && r.auth.sshKeyName && r.auth.sshKeyName !== ''"> - SSH Key:
+                        {{r.auth.sshKeyName}}</span>
+                </td>
+                <td class="rightAlign">
+                    <button *ngIf="r.type === '' && apiConfig && !apiConfig.project_vcs_management_disabled" nz-button
+                        nzDanger nzType="primary" [nzLoading]="deleteLoading"
+                        (click)="clickDeleteButton(r.name)">Remove</button>
+                </td>
+            </tr>
         </tbody>
     </nz-table>
 </div>
