--- a/ui/src/app/views/projectv2/sidebar/project.sidebar.scss
+++ b/ui/src/app/views/projectv2/sidebar/project.sidebar.scss
@@ -52,7 +52,7 @@
         }
       }
       .content {
-        padding: 16px;
+        padding: 16px 5px 16px 5px;
         background-color: #fff;
         border-bottom: 1px solid #d9d9d9;
         overflow-y: auto;
