--- a/ui/src/app/views/projectv2/vcs/repository/workermodel/show/project.workermodel.show.html
+++ b/ui/src/app/views/projectv2/vcs/repository/workermodel/show/project.workermodel.show.html
@@ -1,8 +1,13 @@
 <div class="workerModelShow">
-    <ng-container *ngIf="workerModel">
-        <h3>Worker model {{workerModel.name}}</h3>
+    <ng-container *ngIf="currentWorkerModelName && !loading">
+        <h3>Worker model {{currentWorkerModelName}} <span *ngIf="workerModel?.file_path">({{' ' + workerModel.file_path + ' '}})</span></h3>
         <div class="workerModel-container">
-            <app-entity [data]="workerModel.data" [jsonschema]="jsonSchema"></app-entity>
+            <ng-container *ngIf="workerModel && !errorNotFound">
+                <app-entity [data]="workerModel.data" [jsonschema]="jsonSchema"></app-entity>
+            </ng-container>
+            <ng-container *ngIf="errorNotFound">
+                <nz-alert nzType="warning" nzDescription="Worker model not found on branch {{currentBranch}}" nzShowIcon></nz-alert>
+            </ng-container>
         </div>
         <div class="footer">
             <div class="buttons">
@@ -11,5 +16,8 @@
                 </button>
             </div>
         </div>
+    </ng-container>
+    <ng-container *ngIf="loading">
+        <nz-spin nzTip="Loading worker model"></nz-spin>
     </ng-container>
 </div>
