--- a/ui/src/app/views/projectv2/vcs/repository/show/project.repository.show.scss
+++ b/ui/src/app/views/projectv2/vcs/repository/show/project.repository.show.scss
@@ -59,6 +59,16 @@
 ul.nopoint {
     list-style-type: none;
     padding: 0;
+    max-height: 500px;
+    overflow-y: auto;
+
+    .container {
+        display: flex;
+
+        .label {
+            align-self: center;
+        }
+    }
 }
 
 
