fix: error display in UI

--- a/ui/src/app/views/projectv2/vcs/repository/show/project.repository.show.scss
+++ b/ui/src/app/views/projectv2/vcs/repository/show/project.repository.show.scss
@@ -32,6 +32,7 @@
         .error {
             width: 400px;
             word-break: break-word;
+            white-space: pre-line;
         }
     }
 
