--- a/ui/src/app/shared/project-breadcrumb/project-breadcrumb.html
+++ b/ui/src/app/shared/project-breadcrumb/project-breadcrumb.html
@@ -1,4 +1,4 @@
-<div class="CDSbreadcrumb">
+<div class="breadcrumb">
     <nz-breadcrumb>
         <nz-breadcrumb-item>
             <!-- PROJECT -->
