--- a/ui/src/app/shared/breadcrumb/breadcrumb.scss
+++ b/ui/src/app/shared/breadcrumb/breadcrumb.scss
@@ -1,23 +1,18 @@
 @import '../../../common';
 
-.CDSbreadcrumb {
-  padding: 15px;
-  height: $navbarHeight;
-  position: relative;
-  box-shadow: 0px 1px 2px 0 rgba(34, 36, 38, 0.15);
-  margin: 0;
-  padding: 1em 1em;
-  border: 1px solid rgba(34, 36, 38, 0.15);
+.breadcrumb {
+    height: 46px;
+    border-bottom: 1px solid rgba(34, 36, 38, 0.15);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 
-  :host-context(.night) & {
-    border-color: $darkTheme_grey_4;
-    box-shadow: none;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-  }
+    :host-context(.night) & {
+        border-color: $darkTheme_grey_4;
+    }
 
-  nz-breadcrumb {
-    display: inline;
-  }
+    nz-breadcrumb {
+        margin: 0 15px;
+        flex: 1;
+    }
 }
