--- a/ui/src/app/views/application/show/application.html
+++ b/ui/src/app/views/application/show/application.html
@@ -3,39 +3,41 @@
     <div id="ApplicationShow">
         <app-project-breadcrumb [project]="project" [application]="readOnlyApplication" [workflow]="workflowName"
             [workflowRun]="workflowNum" [workflowRunNode]="workflowNodeRun" [wPipeline]="workflowPipeline">
-            <div class="right floated labelFeature" [title]="'workflow_from_repository_btn' | translate">
-                <nz-tag [nzColor]="application?.from_repository?'green':''" nz-popover nzPopoverTrigger="click" [nzPopoverContent]="popupFromRepository"
-                        nzPopoverPlacement="leftBottom"><i nz-icon nzType="code" nzTheme="outline"></i>as code</nz-tag>
-                <ng-template #popupFromRepository>
-                    <div class="content infoPopup">
-                        <ng-container *ngIf="application && application.from_repository">
-                            <p>
-                                {{ 'application_from_repository' | translate: {repo: application.from_repository} }}
-                            </p>
-                        </ng-container>
-                        <ng-container *ngIf="application && !application.from_repository">
-                            <p>{{'application_repository_help_line_1' | translate}}</p>
-                            <p>{{'workflow_repository_help_line_2' | translate}}</p>
-                            <div class="footer">
-                                <div>
-                                    <a class="item" target="_blank" rel="noopener noreferrer"
-                                            href="#" [routerLink]="['/docs', 'tutorials', 'init_workflow_with_cdsctl']">
-                                            Read more
-                                    </a>
-                                </div>
+            <nz-tag class="labelFeature" [title]="'workflow_from_repository_btn' | translate"
+                [nzColor]="application?.from_repository?'green':''" nz-popover nzPopoverTrigger="click"
+                [nzPopoverContent]="popupFromRepository" nzPopoverPlacement="leftBottom"><i nz-icon nzType="code"
+                    nzTheme="outline"></i>as code</nz-tag>
+            <ng-template #popupFromRepository>
+                <div class="content infoPopup">
+                    <ng-container *ngIf="application && application.from_repository">
+                        <p>
+                            {{ 'application_from_repository' | translate: {repo: application.from_repository} }}
+                        </p>
+                    </ng-container>
+                    <ng-container *ngIf="application && !application.from_repository">
+                        <p>{{'application_repository_help_line_1' | translate}}</p>
+                        <p>{{'workflow_repository_help_line_2' | translate}}</p>
+                        <div class="footer">
+                            <div>
+                                <a class="item" target="_blank" rel="noopener noreferrer" href="#"
+                                    [routerLink]="['/docs', 'tutorials', 'init_workflow_with_cdsctl']">
+                                    Read more
+                                </a>
                             </div>
-                        </ng-container>
-                    </div>
-                </ng-template>
-            </div>
+                        </div>
+                    </ng-container>
+                </div>
+            </ng-template>
         </app-project-breadcrumb>
         <app-tabs [tabs]="tabs" (onSelect)="selectTab($event)"></app-tabs>
         <ng-container *ngIf="editMode && !readOnly">
             <nz-button-group class="ascodeButton">
                 <ng-container *ngIf="application.editModeChanged">
-                    <button nz-button nzType="default" (click)="cancelApplication()">{{'common_cancel' | translate }}</button>
+                    <button nz-button nzType="default" (click)="cancelApplication()">{{'common_cancel' | translate
+                        }}</button>
                 </ng-container>
-                <button nz-button nzType="primary" [disabled]="!application.editModeChanged" (click)="saveEditMode()">{{'btn_save_application' | translate }}</button>
+                <button nz-button nzType="primary" [disabled]="!application.editModeChanged"
+                    (click)="saveEditMode()">{{'btn_save_application' | translate }}</button>
             </nz-button-group>
         </ng-container>
 
@@ -47,15 +49,13 @@
                             <app-home [project]="project" [application]="application"></app-home>
                         </div>
                         <div *ngSwitchCase="'variables'">
-                            <ng-container
-                                *ngIf="!readOnly">
+                            <ng-container *ngIf="!readOnly">
                                 <h3>{{ 'application_variable_form_title' | translate}}</h3>
                                 <app-variable-form [loading]="varFormLoading"
                                     (createVariableEvent)="variableEvent($event)"></app-variable-form>
                             </ng-container>
                             <h3>{{ 'application_variable_list_title' | translate}}</h3>
-                            <app-variable [variables]="application.variables"
-                                [mode]="readOnly?'ro':'edit'"
+                            <app-variable [variables]="application.variables" [mode]="readOnly?'ro':'edit'"
                                 (event)="variableEvent($event)" auditContext="application" [project]="project"
                                 [applicationName]="readOnlyApplication.name"></app-variable>
                         </div>
@@ -73,11 +73,13 @@
                             </ng-container>
                         </div>
                         <div *ngSwitchCase="'keys'">
-                            <app-application-keys [project]="project" [application]="application" [editMode]="editMode" [readOnly]="readOnly">
+                            <app-application-keys [project]="project" [application]="application" [editMode]="editMode"
+                                [readOnly]="readOnly">
                             </app-application-keys>
                         </div>
                         <div *ngSwitchCase="'advanced'">
-                            <app-application-admin [application]="application" [project]="project" [editMode]="editMode">
+                            <app-application-admin [application]="application" [project]="project"
+                                [editMode]="editMode">
                             </app-application-admin>
                         </div>
                     </div>
