--- a/ui/src/app/views/project/show/project.html
+++ b/ui/src/app/views/project/show/project.html
@@ -8,19 +8,17 @@
             ({{gp.group.organization}}){{ i < groupsOutsideOrganization.length - 1 ? ', ' : '' }}</span>
                 .
     </ng-template>
-    <i *ngIf="project && groupsOutsideOrganization && groupsOutsideOrganization.length > 0" nz-icon
-       nzType="warning" class="orange" nzTheme="fill" nz-popover [nzPopoverContent]="warnPermission" nzPopoverPlacement="bottomLeft"></i>
+    <i *ngIf="project && groupsOutsideOrganization && groupsOutsideOrganization.length > 0" nz-icon nzType="warning"
+        class="orange" nzTheme="fill" nz-popover [nzPopoverContent]="warnPermission"
+        nzPopoverPlacement="bottomLeft"></i>
 </ng-template>
 <div id="ProjectShow">
-<div *ngIf="project; then projectPart;else loadingPart"></div>
-<ng-template #projectPart>
+    <div *ngIf="project; then projectPart;else loadingPart"></div>
+    <ng-template #projectPart>
         <app-project-breadcrumb [project]="project" [workflow]="workflowName" [workflowRun]="workflowNum"
             [workflowRunNode]="workflowNodeRun" [wPipeline]="workflowPipeline">
-            <div class="right floated" [title]="'favorite_add_btn' | translate">
-                <span nz-icon [nzType]="'loading'" *ngIf="loadingFav"></span>
-                <i nz-icon nzType="star" nzTheme="outline" class="star unfavorite" *ngIf="!project?.favorite" (click)="updateFav()"></i>
-                <i nz-icon nzType="star" nzTheme="fill" class="star favorite" *ngIf="project?.favorite" (click)="updateFav()"></i>
-            </div>
+            <app-favorite-button *ngIf="project" [active]="project?.favorite" (click)="updateFav()"
+                [loading]="loadingFav"></app-favorite-button>
         </app-project-breadcrumb>
         <app-tabs [tabs]="tabs" (onSelect)="selectTab($event)"></app-tabs>
         <div class="scrollingContent">
@@ -63,8 +61,8 @@
                 </div>
             </div>
         </div>
-</ng-template>
-<ng-template #loadingPart>
-    <nz-spin nzTip="Loading project..."></nz-spin>
-</ng-template>
+    </ng-template>
+    <ng-template #loadingPart>
+        <nz-spin nzTip="Loading project..."></nz-spin>
+    </ng-template>
 </div>
